<resources>
    <string name="app_name">Jason Fit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="start_pause">start\npause</string>

    <!-- Strings for Workout(s) screen's -->

    <string name="current">Current</string>
    <string name="complete">Complete</string>
    <string name="workout_time_null">00:00</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="workout_congrats">Congratulations! You finished your workout successfully. Please input your weight in %s.</string>
    <string name="sure_go_back">Are you sure you want to go back? Current workout will be canceled.</string>

    <string name="tts_failed">Text To Speech Initialization Failed!</string>
    <string name="tts_countdown">three two one</string>
    <string name="workout_end">Workout is finished, please enter your weight.</string>


    <!-- End of Strings for Workout(s) screen's -->

    <!-- Strings for Info screen -->
    <string name="search">Search</string>

    <string name="info_disclaimer_title">disclaimer</string>
    <string name="info_disclaimer_content">We give our best to show you with this system how to achieve good results for your body.
                Results can not be guaranteed, they also highly depend on the eating and training habits of the user. Generally we recommend for every new
                kind of sport or workout, please firstly consult your doctor.</string>
    <string name="info_ideas_title">ideas</string>
    <string name="info_ideas_content">Please send your ideas to ###fitapps@gmail.com</string>
    <string name="info_faq_title">faq</string>
    <string name="info_faq_content">How long should I use this program?\n As many other programs, we recommend at least 12 weeks to obtain very good body results.
                How can I cancel the subscription? Go to your App Stores Settings > view the APPLE-ID > view „Subscriptions“ > change the settings.</string>

    <!-- End of Strings for Info screen -->

    <!-- Strings for sideMenu -->

    <string name="workouts">Workouts</string>
    <string name="meals">Meals</string>
    <string name="stats">Stats</string>
    <string name="foods">Foods</string>
    <string name="settings">Settings</string>
    <string name="enter_settings">Please Enter Your Settings</string>
    <string name="info">Info</string>

    <!-- End of  Strings for sideMenu -->

    <!-- Strings for Stats fragment -->

    <string name="current_body_mass_index">CURRENT BODY MASS INDEX"</string>
    <string name="calories_burnt">CALORIES BURNT</string>
    <string name="weight_from_start_to_today">weight from start to today</string>

    <string name="body_mass_overweight_title">Overweight</string>
    <string name="calories_burnt_this_week">This week</string>
    <string name="calories_burnt_last_week">Last week</string>
    <string name="calories_burnt_record_week">Week record</string>
    <string name="kcal">&#160;kcal</string>
    <string name="week">WEEK:&#160;</string>

    <string name="bmi_very_underweight">Very severely underweight</string>
    <string name="bmi_severely_underweight">Severely underweight</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal">Normal(healthy weight)</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese1">Obese Class I(Moderately obese)</string>
    <string name="bmi_obese2">Obese Class II(Severely obese)</string>
    <string name="bmi_obese3">Obese Class III(Very severely obese)</string>
    <string name="bmi_human">Are You a human?</string>

    <string-array name="week_days">
        <item>MO</item>
        <item>TU</item>
        <item>WE</item>
        <item>TH</item>
        <item>FR</item>
        <item>SA</item>
        <item>SU</item>
    </string-array>

    <!-- End of strings for Stats fragment -->

    <!-- Strings for Settings screen -->

    <string name="current_weight">Current Weight</string>
    <string name="set_weight">Set Weight</string>
    <string name="height">Height</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="language">Language</string>
    <string name="measurement">Measurement</string>
    <string name="weight">Weight</string>
    <string name="nutrition">Nutrition</string>
    <string name="choose_nutrition">Choose Nutrition</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="cm">cm</string>
    <string name="inch">inch</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>

    <string name="snackbar_main">Your data was changed</string>
    <string name="snackbar_weight">You weight can be changed after workout is done</string>

    <!-- End of strings for Settings screen -->

    <!-- Strings for Start screen -->

    <string name="try_for_free">TRY THIS APP\nFREE FOR 7 DAYS</string>
    <string name="one_month">1 MONTH € 9,99</string>

    <string name="error">Error</string>
    <string name="please_enter_valid_height">Please, enter valid height.</string>
    <string name="please_enter_valid_weight">Please, enter valid weight.</string>
    <string name="food">Food</string>
    <string name="let_us_start">LET\'S START!</string>
    <string name="meal">Meal</string>
    <string name="split">:</string>
    <string name="sorry">Sorry</string>
    <string name="something_goes_wrong_during_subscription">Sorry, something goes wrong during subscription. Please, try again later.</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="nutrition">
        <item>All Foods</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Deutsch</item>
    </string-array>

    <string-array name="height_measurement">
        <item>cm</item>
        <item>inch</item>
    </string-array>

    <string-array name="weight_measurement">
        <item>kg</item>
        <item>lbs</item>
    </string-array>

    <string-array name="food_descriptors">
        <item>Proximities</item>
        <item>Minerals</item>
        <item>Vitamins</item>
        <item>Lipids</item>
        <item>Other</item>
    </string-array>

    <string-array name="proximities">
        <item>Water</item>
        <item>Energy</item>
        <item>Protein</item>
        <item>Total Lipid (Fat)</item>
        <item>Carbohydrate (By Difference)</item>
        <item>Fiber (Total Dietary)</item>
        <item>Sugars (Total)</item>
    </string-array>

    <string-array name="minerals">
        <item>Calcium, Ca</item>
        <item>Iron, Fe</item>
        <item>Magnesium, Mg</item>
        <item>Phosphorus, P</item>
        <item>Potassium, K</item>
        <item>Sodium, Na</item>
        <item>Zinc, Zn</item>
    </string-array>

    <string-array name="vitamins">
        <item>Vitamin C, total ascorbic acid</item>
        <item>Thiamin</item>
        <item>Riboflavin</item>
        <item>Niacin</item>
        <item>Vitamin B-6</item>
        <item>Folate, DFE</item>
        <item>Vitamin B-12</item>
        <item>Vitamin A, RAE</item>
        <item>Vitamin A, IU</item>
        <item>Vitamin E (alpha-tocopherol)</item>
        <item>Vitamin D (D2+D3)</item>
        <item>Vitamin D</item>
        <item>Vitamin K (phylloquinone)</item>
    </string-array>

    <string-array name="lipids">
        <item>Fatty acids, total saturated</item>
        <item>Fatty acids, total monounsaturated</item>
        <item>Fatty acids, total polyunsaturated</item>
        <item>Fatty acids, total trans</item>
        <item>Cholesterol</item>
    </string-array>

    <string-array name="other">
        <item>Caffeine</item>
    </string-array>

    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Forenoon Snack</item>
        <item>Lunch</item>
        <item>Afternoon Snack</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="meal_descriptors">
        <item>Ingredients</item>
        <item>Instructions</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="coaching">Coaching</string>
    <string name="calculate">Calculate</string>
    <string name="meal_calculator_picker_hint">Input here food amount in grams</string>

    <string name="subscribe_for_coaching">SUBSCRIBE FOR\nCOACHING</string>
    <string name="coaching_price">1 MONTH € 42,99</string>

</resources>
