<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.8"
                    android:gravity="center_vertical"
                    android:text="@string/measurement"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <Spinner
                    android:id="@+id/spinner_height"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:entries="@array/height_measurement" />

                <Spinner
                    android:id="@+id/spinner_weight"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:entries="@array/weight_measurement" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/current_weight"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_horizontal"
                    android:inputType="none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/height"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_horizontal"
                    android:inputType="none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/birthday"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_horizontal"
                    android:inputType="none"
                    android:textAllCaps="false"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/gender"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <Spinner
                    android:id="@+id/spinner_gender"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:entries="@array/gender" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/nutrition"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <Spinner
                    android:id="@+id/spinner_nutrition"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:entries="@array/nutrition" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_marginRight="@dimen/common_margin"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/normal_text_size" />

                <Spinner
                    android:id="@+id/spinner_language"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:entries="@array/language" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>